src/test/deca/syntax/valid/testPrints.deca
// Test all print statements
{
  printlnx("Hello");
  printx("Hello");
  print("Hello");
}
