src/test/deca/syntax/invalid/testPrint3.deca
// print invalid characters
// Result : Error
{
    println("tab \t");
}
